Version 23.11.1. Added synonymazer and simplifyer
